fixed deployments redirects

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -214,8 +214,8 @@
                         <!-- top links -->
                         <div class="headerlinkmenu col-lg-8 col-md-7 col-sm-8 col-xs-12">
                             <div class="links">
-                                <div class="myaccount"><a title="My Account" routerLink="/signup"><i class="fa fa-user"></i><span class="hidden-xs">Sign up as Creator</span></a></div>
-                                <div class="login"><a routerLink="/login"><i class="fa fa-unlock-alt"></i><span class="hidden-xs">Log In</span></a></div>
+                                <div class="myaccount"><a title="My Account" routerLink="/signup" target="_blank"><i class="fa fa-user"></i><span class="hidden-xs">Sign up as Creator</span></a></div>
+                                <div class="login"><a routerLink="/login" target="_blank"><i class="fa fa-unlock-alt"></i><span class="hidden-xs">Log In</span></a></div>
 
 
                             </div>
