--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -97,9 +97,13 @@
 
                                 <label for="Password"></label>
                                 <input type="Password" class="form-control" name="password" ngModel="" placeholder="Password" required/>
+                                <br>
+                                <label for="Bank">* Select Bank</label>
+                                <select name="bank" class="form-control" ngModel="044" value="Access Bank">
+                                  <option value="Access Bank">Access Bank</option>
+                                  <option>Wema Bank</option>
 
-                                <label for="Bank"></label>
-                                <input type="text" class="form-control" name="bank" ngModel="" placeholder="Bank" required/>
+                                </select>
 
                                 <label for="AccountNumber"></label>
                                 <input type="text" class="form-control" name="accountNumber" ngModel="" placeholder="AccountNumber" required/>
